--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,13 +1,31 @@
-<form>
+<form (ngSubmit)="f.form.valid && agregarValor()" #f="ngForm">
   <div class="agregar">
     <div class="agregar_contenedor">
-      <select class="agregar_tipo">
-        <option value="ing" selected>+</option>
-        <option value="egr">-</option>
+      <select (change)="tipoOperacion($event)" 
+        class="agregar_tipo"
+        [ngClass]="{redfocus: tipo === 'egresoOperacion'}">
+        <option value="ingresoOperacion" selected>+</option>
+        <option value="egresoOperacion">-</option>
       </select>
-      <input type="text" class="agregar_descripcion" placeholder="Agregar Descripción">
-      <input type="number" class="agregar_valor" placeholder="Valor">
-      <button class="agregar_btn"><i class="ion-ios-checkmark-outline"></i></button>
+      <input [ngClass]="{redfocus: tipo === 'egresoOperacion'}"
+        name="descripcionInput"
+        type="text" 
+        class="agregar_descripcion" 
+        placeholder="Agregar Descripción"
+        [(ngModel)]="descripcionInput" required>
+      <input 
+        [ngClass]="{redfocus: tipo === 'egresoOperacion'}"
+        type="number" 
+        class="agregar_valor" 
+        placeholder="Valor"
+        name="valorInput"
+        [(ngModel)]="valorInput" required>
+      <button 
+        type="submit"
+        class="agregar_btn">
+        <i class="ion-ios-checkmark-outline"
+        [ngClass]="{red: tipo === 'egresoOperacion'}"></i>
+      </button>
     </div>
   </div>
 </form>
